--- a/LibretroRT.AngleRenderer/LibretroRT.AngleRenderer.vcxproj
+++ b/LibretroRT.AngleRenderer/LibretroRT.AngleRenderer.vcxproj
@@ -209,6 +209,7 @@
     <ClInclude Include="AngleRenderer.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="OpenGLES.h" />
+    <ClInclude Include="SoftwareFramebufferManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AngleRenderer.cpp" />
@@ -221,6 +222,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="OpenGLES.cpp" />
+    <ClCompile Include="SoftwareFramebufferManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
